[metadata]
name = towhee
description = Towhee is a framework that helps you encode your unstructured data into embeddings.
long_description = file: README.md
url = https://github.com/towhee-io/towhee
author = Towhee Team
author_email=towhee-team@zilliz.com
license = Apache License Version 2.0
license_file = LICENSE
platforms = unix, linux, osx, win32

[build_sphinx]
project = towhee
version = 0.6
release = 0.6.0
source-dir = towhee/doc/source

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=5 --doctest-modules --ignore=tests/unittests/test_cache/  --ignore=tests/unittests/hub/ --ignore=tests/unittests/engine/ --ignore=tests/unittests/utils/test_git_utils.py
log_cli = true
testpaths =
    tests/unittests/
    towhee/functional/

[coverage:run]
branch = true
source = towhee
omit = 
    towhee/models/*
    towhee/trainer/*

[coverage:report]
# show_missing = True
# skip_covered = True
# Ignore missing source files, i.e. fake template-generated "files"
ignore_errors = true