[metadata]
name = towhee
version = 1.1.2
description = Towhee is a framework that helps you encode your unstructured data into embeddings.
long_description = file: README.md
url = https://github.com/towhee-io/towhee
author = Towhee Team
author_email=towhee-team@zilliz.com
license = Apache License Version 2.0
license_file = LICENSE
platforms = unix, linux, osx, win32

[build_sphinx]
project = towhee
version = 1.1
release = 1.1.2
source-dir = towhee/doc/source

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=5 --doctest-modules --doctest-glob=*.md --ignore=tests/unittests/test_cache/ --ignore=tests/unittests/triton/expected_files/
log_cli = true
testpaths =
    tests/unittests/
    towhee/functional/
    towhee/hparam/
    towhee/types/
    towhee/engine/
    towhee/hub/
    towhee/operator/
    towhee/datacollection/

[coverage:run]
branch = true
source = towhee

[coverage:report]
# show_missing = True
# skip_covered = True
# Ignore missing source files, i.e. fake template-generated "files"
ignore_errors = true
